--- a/_posts/2017-12-30-C++编程思想 笔记.md
+++ b/_posts/2017-12-30-C++编程思想 笔记.md
@@ -20,18 +20,76 @@ tags:
 
 与徐程序通过添加新的对象类型，而是程序能够根据问题的术语进行调整。
 
-### Smalltalk的五个基本特性
+### Smalltalk的五个基本特性：
 
-1.万物皆对象
+1. 万物皆对象
 
-2.程序就是一组对象，对象之间通过发送消息互相通知做什么。
+2. 程序就是一组对象，对象之间通过发送消息互相通知做什么。
 
-3.每一个对象都有它自己的由其他对象构成的存储区。
+3. 每一个对象都有它自己的由其他对象构成的存储区。
 
-4.每个对象都有一个类型。
+4. 每个对象都有一个类型。
 
-5.一个特定类型的所有对象都能接受相同的消息。
+5. 一个特定类型的所有对象都能接受相同的消息。
 
 ## 对象都有一个接口
 
-创建抽象数据类型（Class）是面向对象程序设计的基本思想。程序员可以创建类型的变量（面向对象的说法叫‘对象（object）’或‘实例（instance）’
+在程序执行期间的的状态之外其他方面都一样的对象归类为”几类对象”，这就是 *类（class）* 的来源。
+
+创建抽象数据类型 是面向对象程序设计的基本思想。程序员可以创建类型的变量（面向对象的说法叫 *对象（object）* 或 *实例（instance）*）
+
+程序员定义类是为了与具体问题相适应，而不是被迫使用已经存在的数据类型。
+
+接口规定我们能向特定的对象发出什么请求。但是必须有代码满足这种请求，再加上隐藏的数据，就组成了 *实现（implementation）*。
+
+## 实现的隐藏
+
+把程序员划分为 *类创建者* 和 *客户程序员*。
+
+C++语言使用三个明确的关键字来设置类中的边界：**public** 、 **private** 、 **protected** 。
+
+## 实现的重用
+
+重用一个类最简单的方法就是直接使用这个类的对象，并且还可以把这个类的对象放到一个新类的里面。我们称之为“创建一个成员对象”。
+
+新类的成员对象通常是私有的，使用这个各类的客户程序员不能接触它们。这种特点允许我们改变这些成员而不会干扰已存在的客户代码。
+
+## 继承：重用接口
+
+*继承（inheritance）* ：选取一个已经存在的类，克隆它，然后对这个类增加和修改，得到一个克隆的新类型（一般被称为 *派生类* ， *继承类* 或 *子类* ）。
+
+有两种方法能够使派生类区别于原始基类：
+
+1. 简单地向派生类添加全新的函数。
+
+2. 改变己经存在的基类函数的行为，这一般称为 *重载（overriding）* 这个函数。
+
+### is-a 关系和 is-like-a 关系
+
+只重载的类和原类型的关系一般被称为 is-a 关系。某种意义上这是对待继承的理想方法。
+
+添加全新的函数则被称为 is-like-a 关系。不可以说他和原类型完全相同。
+
+## 具有多态性的可互换对象
+
+解释起来好复杂啊QAQ再看看
+
+## 创建和销毁对象
+
+## 异常处理：应对错误
+
+## 分析和设计
+
+### 第0阶段：制定计划
+
+### 第1阶段 我们在做什么
+
+### 第2阶段：我们将如何建立对象
+
+### 第3阶段：创建核心
+
+### 第4阶段：迭代用例
+
+### 第5阶段：进化
+
+### 计划的回报
