--- a/_posts/2017-12-30-微积分复习笔记.md
+++ b/_posts/2017-12-30-微积分复习笔记.md
@@ -1,7 +1,17 @@
 ---
-title: C++编程思想 学习笔记
+title: 微积分复习笔记
 description: 记录一下
 categories:
  - 学习笔记
 tags:
 ---
+
+准备期末的所以大概是从Taylor开始。
+
+~~回头挂课重修就可以把前面的补上辣~~
+
+## 4.3 Taylor公式
+
+若 $f$ 在 $x_0$ 可导，则有
+
+$$f(x) = f(x_0)+f'(x_0)(x-x_0)+o(x-x_0),(x_x_0)$$
