--- a/_posts/2017-12-30-微积分复习笔记.md
+++ b/_posts/2017-12-30-微积分复习笔记.md
@@ -22,8 +22,8 @@ $$P_n(x)=f(x_0)+f'(x_0)(x-x_0)+...+\frac {1}{n!}f^{(n)}(x_0)(x-x_0)^{n}$$
 
 为$f$在$x_0$处的$n$阶Taylor多项式
 
-###带Lagrange余项的Taylor公式
+### 带Lagrange余项的Taylor公式
 
-$f$在 $(a,b)$ 上 $n+1$ 阶可导，$f^{(n)}\in C[a,b],x_0,x /in [a,b]$,则存在介于$x_0$和$x$之间的$\frac {f^{(n+1)}(\xi)}{(n+1)!}$
+$f$在 $(a,b)$ 上 $n+1$ 阶可导，$f^{(n)}\in C[a,b],x_0,x /in [a,b]$,则存在介于$x_0$和$x$之间的$\xi$
 
 $$f(x)=\sum_{k=0}^{n}\frac {1}{k!}f^{(k)}(x_0)(x-x_0)^k+\frac {f^{(n+1)}(\xi)}{(n+1)!}$$
