--- a/_posts/2017-12-30-微积分复习笔记.md
+++ b/_posts/2017-12-30-微积分复习笔记.md
@@ -27,3 +27,94 @@ $$P_n(x)=f(x_0)+f'(x_0)(x-x_0)+...+\frac {1}{n!}f^{(n)}(x_0)(x-x_0)^{n}$$
 $f$在 $(a,b)$ 上 $n+1$ 阶可导，$f^{(n)}\in C[a,b],x_0,x /in [a,b]$,则存在介于$x_0$和$x$之间的$\xi$
 
 $$f(x)=\sum_{k=0}^{n}\frac {1}{k!}f^{(k)}(x_0)(x-x_0)^k+\frac {f^{(n+1)}(\xi)}{(n+1)!}$$
+
+~~听说实在不会做的题目可以拿这个硬上~~
+
+## 5.1 Riemann积分的概念
+
+曲边梯形的面积
+
+分割，记分割的区间的长度的最大值作为分割的直径$T$
+
+$$\lim_{|T| \rightarrow 0}\sum_{i=1}^{n}f(\xi_i)\Delta x_i=I$$
+
+等价于
+
+$$\int_b^af(x)dx=I$$
+
+$a,b,f,x$分别被称为积分上，下限，被积函数和积分变量
+
+### Darbox上和 Darbox下和 Riemann和
+
+注意在加入新分点（合并两个分点集合）的过程中上和与下和的单调性
+
+### 一致连续性
+
+## 5.2 Riemann积分的性质
+
+1. 线性性质
+
+2. 积分区间的可加性
+
+3. 单调性
+
+4. 积分估值
+
+$$|\int_b^af(x)dx| \leq \int_b^a |f(x)|dx $$
+
+5. Cauchy不等式
+
+$$f,g \in R[a,b]$$
+
+$$(\int_b^af(x)g(x)dx)^2 \leq \int_b^af^2(x)dx*\int_b^ag^2(x)dx$$
+
+6. 积分第一中值定理
+
+$f \in C[a,b],g \in R[a,b],g$不变号,则
+
+$$\exists \xi \in [a,b],s.t. \int_b^af(x)g(x)dx = f(\xi)\int_b^a g(x)dx$$
+
+特别的，当$g(x)\equiv 1$时
+
+
+$$\exists \xi \in [a,b],s.t. \int_b^af(x)dx = f(\xi)(b-a)$$
+
+## 5.3 Newton-Leibniz
+
+证明：花式运用一致连续性
+
+## 算积分部分，做题，注意复杂积分表，没啥好玩的
+
+## 5.7 积分的运用
+
+### 平面图形的面积
+
+直角坐标系:
+
+$$S=\int |f(x)|dx$$
+
+极坐标：
+
+$$S=\int_\alpha^\beta\frac{1}{2}\rho^2(\theta)d\theta$$
+
+### 弧长
+
+直角坐标系
+
+$$l=\int \sqrt{x'^(t)2+y'^2(t)+z'^2(t)}dt$$
+
+极坐标：
+
+$$l=\int \sqrt{(\rho'(\theta))^2+\rho(\theta))^2}$$
+
+### 曲率
+
+$$k=\frac{|f''(x)|}{(1+(f'(x))^2)^\frac{3}{2}}=\frac{1}{R}$$
+
+### 旋转体体积
+
+$$V=\pi\int_a^bf^2(x)dx$$
+
+### 旋转面的面积
+
+存疑，我再思考一下
