--- a/_posts/2017-12-30-微积分复习笔记.md
+++ b/_posts/2017-12-30-微积分复习笔记.md
@@ -1,6 +1,6 @@
 ---
 title: 微积分复习笔记
-description: 记录一下
+description: “我觉得我可以再抢救一下”
 categories:
  - 学习笔记
 tags:
@@ -117,4 +117,8 @@ $$V=\pi\int_a^bf^2(x)dx$$
 
 ### 旋转面的面积
 
-存疑，我再思考一下
+$$S=2\pi\int y(t)\sqrt{x'(t)^2+y'^2(t)}dt$$
+
+### 质心
+
+垃圾物理题
