--- a/_posts/2017-12-30-C++编程思想 笔记.md
+++ b/_posts/2017-12-30-C++编程思想 笔记.md
@@ -1,9 +1,11 @@
 ---
-title: Thinging In C++ 学习笔记
+title: Thinking in C++ 学习笔记
 description: “已经没有什么好害怕的了”
 categories:
  - 学习笔记
 tags:
+ - 微积分
+ - 笔记
 ---
 
 仿佛是下学期OOP的教材所以先看看，同时也是为了下学期的实习做点准备。
