--- a/_posts/2019-11-18-20191118日记.md
+++ b/_posts/2019-11-18-20191118日记.md
@@ -10,7 +10,7 @@ tags:
 
 aliyun的短信api有点麻烦, 没有试(有点心疼钱)
 
-下去去和xuetangx交易, 仿佛化了一个天大的饼
+下去去和xuetangx交易, 仿佛画了一个天大的饼
 
 计划中要搞定的事情:
 
@@ -19,3 +19,4 @@ aliyun的短信api有点麻烦, 没有试(有点心疼钱)
 3. 十五所
 4. 减肥
 5. 尝试把apple health的数据搞到grafana上(想多了)
+6. xuetangx的架构
